float_eq/tests/derive_tests/float_eq_all/float_eq_all_duplicate_epsilon.rs
use float_eq::{FloatEq, FloatEqAll, FloatEqUlpsEpsilon};

#[derive(Debug, Clone, Copy, PartialEq, FloatEqUlpsEpsilon, FloatEq, FloatEqAll)]
#[float_eq(
    ulps_epsilon = "MyComplex32Ulps",
    all_epsilon = "Epsilon1",
    all_epsilon = "Epsilon2"
)]
struct MyComplex32 {
    re: f32,
    im: f32,
}

fn main() {}
